Changes for alignment issues on mobile and tab

--- a/stylesheet/style1.css
+++ b/stylesheet/style1.css
@@ -100,12 +100,6 @@
     margin-top: -15px;
 }
 
-.flex_item {
-    width: 200px;
-    height: 300px;
-    margin: 10px 60px 0 0;
-}
-
 .banner_bottom {
     position: absolute;
     bottom: 0;
@@ -117,8 +111,7 @@
 }
 
 .event-block {
-    display: flex;
-    margin: 10px 0;
+    margin: 15px 0;
     max-width: 80%;
     color: #fff;
 }
@@ -142,7 +135,6 @@
     font-size: 12px;
     font-weight: 300;
     padding-top: 5px;
-    text-align: justify;
     min-width: 200px;
 }
 
@@ -239,7 +231,7 @@ address {
 .about_event {
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
-    font-size: 20px;
+    font-size: 16px;
     margin: 20px;
     padding: 40px 30px;
 }
@@ -257,9 +249,8 @@ address {
 }
 .venue-content {
     background-color: rgba(0, 0, 0, 0.7);
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 300;
-    padding: 60px;
 }
 .venue-header {
     font-weight: 600;
@@ -274,14 +265,29 @@ address {
     padding-top: 15px;
     float: left;
 }
-@media only screen and (min-width: 800px) {
-    .logo_navbar {
-        padding-left: 80px;
+@media only screen and (min-width: 768px) {
+    .flex_item {
+        margin: 10px 60px 0 0;
+    }
+    .event-block  {
+      display: flex;
+    }
+  
+    .venue-content {
+        padding: 60px;
+        font-size: 20px;
     }
 }
 @media only screen and (min-width: 410px) and (max-width: 769px) {
     .navbar-nav {
         padding-left: 50px;
         width: 65%;
+    }
+      
+}
+@media only screen and (min-width: 769px) {
+  
+      .logo_navbar {
+        padding-left: 80px;
     }
 }
